<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.flamingo.qa</groupId>
    <artifactId>qa-automation-assignment</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Flamingo QA Automation Assignment</name>
    <description>API (REST + GraphQL) and UI test suite: REST Assured, JUnit 5, Playwright, AssertJ</description>

    <!--
      Two source roots on purpose: src/main/java is the reusable framework (clients,
      endpoints, http layer, pojos, config) and src/test/java holds only tests, their
      fixtures and their data. Dependencies the framework itself needs are therefore
      compile-scoped; JUnit, the Allure JUnit integration and DataFaker stay test-scoped.
    -->

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--
          Versions are deliberately pinned, not "latest". Three are intentional downgrades:
            - JUnit  5.14.4  : the assignment specifies "JUnit 5 (latest)". 6.x is a
                               different major line with new coordinates and a Java 17+ floor.
            - Allure 2.35.5  : 3.0.0 is a brand-new major with a rewritten report pipeline;
                               its JUnit 5 / REST Assured integrations are unproven here.
            - AssertJ 3.27.7 : 4.0.0-M1 is a milestone, not a release.
          REST Assured stays on the mature 5.x branch for the same reason.
          See IMPLEMENTATION_PLAN.md section 4.
        -->
        <junit.version>5.14.4</junit.version>
        <rest-assured.version>5.5.7</rest-assured.version>
        <playwright.version>1.63.0</playwright.version>
        <assertj.version>3.27.7</assertj.version>
        <jackson.version>2.22.2</jackson.version>
        <lombok.version>1.18.48</lombok.version>
        <!-- The Allure Java library and the Allure report renderer (allure-commandline)
             are versioned INDEPENDENTLY. Pinning both to the library version fails with
             "Cannot resolve allure commandline dependencies" - the zip simply does not
             exist at 2.35.5. Keep these two properties separate. -->
        <allure.version>2.35.5</allure.version>
        <allure.report.version>2.46.1</allure.report.version>
        <aspectj.version>1.9.25</aspectj.version>
        <datafaker.version>2.7.0</datafaker.version>
        <slf4j.version>2.0.19</slf4j.version>

        <surefire.plugin.version>3.6.0</surefire.plugin.version>
        <allure.maven.version>2.18.0</allure.maven.version>
        <exec.plugin.version>3.6.4</exec.plugin.version>
        <compiler.plugin.version>3.16.0</compiler.plugin.version>

        <!-- Empty default so surefire's @{argLine} late-binding composes instead of failing
             if a coverage agent (e.g. JaCoCo) is added later. -->
        <argLine></argLine>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
        </dependency>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-bom</artifactId>
                <version>${allure.version}</version>
                <type>pom</type>
                <scope>import</scope>
        </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <type>pom</type>
                <scope>import</scope>
        </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- ===== Test platform ===== -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- ===== API testing ===== -->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${rest-assured.version}</version>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>json-path</artifactId>
            <version>${rest-assured.version}</version>
        </dependency>

        <!-- ===== UI testing ===== -->
        <dependency>
            <groupId>com.microsoft.playwright</groupId>
            <artifactId>playwright</artifactId>
            <version>${playwright.version}</version>
        </dependency>

        <!-- ===== Assertions ===== -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
        </dependency>

        <!-- ===== JSON ===== -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>

        <!-- ===== Test data ===== -->
        <dependency>
            <groupId>net.datafaker</groupId>
            <artifactId>datafaker</artifactId>
            <version>${datafaker.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- ===== Boilerplate reduction (bonus) ===== -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- ===== Reporting (bonus) ===== -->
        <!-- allure-junit5 was renamed to allure-jupiter in Allure 2.35.x; the old
             coordinate still resolves via relocation but emits a build warning. -->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-rest-assured</artifactId>
        </dependency>

        <!-- ===== Logging ===== -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin.version}</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
                <configuration>
                    <!-- AspectJ weaver is required by Allure for @Step / @Attachment weaving.
                         @{argLine} late-binding keeps this composable with coverage agents. -->
                    <argLine>
                        @{argLine}
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <systemPropertyVariables>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                        <junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
                    </systemPropertyVariables>
                    <!-- Do not fail the whole build when a tag filter matches nothing,
                         so `-Dgroups="ui"` stays usable in CI matrix jobs. -->
                    <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                </dependency>
                </dependencies>
            </plugin>

            <!-- `mvn allure:report` / `mvn allure:serve` — no global Allure CLI install needed. -->
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven.version}</version>
                <configuration>
                    <reportVersion>${allure.report.version}</reportVersion>
                    <resultsDirectory>${project.build.directory}/allure-results</resultsDirectory>
                </configuration>
            </plugin>

            <!-- Playwright browser installation:
                 mvn exec:java -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args="install chromium" -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec.plugin.version}</version>
                <configuration>
                    <includePluginDependencies>false</includePluginDependencies>
                    <classpathScope>test</classpathScope>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <!-- Plain-HTML fallback report: mvn surefire-report:report-only site:site -DgenerateReports=false -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
            </plugin>
        </plugins>
    </reporting>
</project>